--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -4,3 +4,68 @@ html,
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 60px;    /* Footer height */
+  background-color: white;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #1A5068;
+  text-align: center;
+}
+
+footer p {
+  display: inline-block;
+  padding-top: 10px;
+  margin: 0 10px;
+  color: white;
+}
+
+footer a:link, footer a:visited {
+  color: #AFC2D5;
+}
+
+footer a:hover {
+  color: white;
+}
+
+header {
+  background-image: url('../images/forest-header.jpg');
+  background-size: cover;
+  background-position: center;
+  background-color: #000724;
+  width: 100%;
+}
+
+h1 {
+  padding: 128px 0 48px 48px;
+  font-size: 3.5em;
+  color: rgb(255, 255, 255);
+}
+
+
+nav {
+  background-color: #feffb1;
+  width: 100%;
+  padding: 0.25rem 0 0.25rem 0;
+}
+
+nav a, .nav {
+  display: inline-block;
+  margin-left: 3rem;
+  padding: 1rem 0 1rem 0;
+  font-size: large;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: #000724;
+}
